#16850 done. Walkaround for bootstrap styles for issues in calendar. z-index for tips

--- a/assets/stylesheets/a_common_styles.css
+++ b/assets/stylesheets/a_common_styles.css
@@ -15,6 +15,11 @@ div.issue.tooltip {
  opacity: 1;
  filter: alpha(opacity=100);
  position: relative;
+ z-index: auto;
+}
+
+span.tip {
+  z-index: 2000;
 }
 
 
